version 0.6.1
The filesystem grow and shrink parts of PartMoveResize
have been moved out of that object and put into their
own files. lv reduce now looks at the minimum shrink 
size for a filesystem

version 0.6.0
Partitions can now be moved and resized for ext2 and ext3
filesystems. The "fsck" program is now required too.

version 0.5.5
The kvpm "settings" dialog can set the column hidden/show for
both of the tree views and save it in the config file.

version 0.5.4
The volume group creation dialog can be called from
the "volume group" menu now and create new groups
from multiple physical volumes.

version 0.5.3
The settings menu is partly implemented. The search 
path for the needed programs such as "vgs" can be 
configured.

version 0.5.2
mount points are on the main tree view now.
New and blingy "create partition" graphic
like "gparted" has to show the size of a partition
about to be created along with the free space around
it.

version 0.5.1
The panels get a more finished look and small
areas (under 1 MiB) of free space are not shown
anymore.

version 0.5.0
Can create a new partition table.
Better support for GPT disk labels and
a visual make over of the device tab. 
Needs cmake version 2.6 or better.
Adds and removes partitions from partition table.

version 0.4.6
Added calls to i18n() for support of translation
to other languages. Some bug fixes and work to
the mount and unmount operations to allow for
overlayed mounting. Help menu for bug reporting 
improved.

version 0.4.5
Added new dialogs to import and export volumes
groups.

version 0.4.4
The lvproperties widgets have a little bit diffent
look now. Small bug fixes. Lvcreate now has a name
validator.

version 0.4.3 
Added more information the the pvproperties widgets. 
They now use a QTableWidget to show the extents 
used by each logical volume. Added an new function,
lvrename, which does just that.

version 0.4.2
Fixed a bug that caused random crashes after 